--- a/helm/back/values.yaml
+++ b/helm/back/values.yaml
@@ -9,16 +9,16 @@ service:
   port: 8081
 
 envSecrets:
-  POSTGRES_HOST:      "rc1a-vv6llmfjh7t4odab.mdb.yandexcloud.net"
-  POSTGRES_PORT:      "6432"
-  POSTGRES_USER:      "java_user"
-  POSTGRES_PASSWORD:  "java-Java"
-  POSTGRES_DB:        "java_db"
-  REDIS_HOST:         "fhmoimgjrf911oh7915c.auto.internal"
-  REDIS_PORT:         "6379"
-  REDIS_PASSWORD:     "redis"
-  FLUENTD_ENABLED:    "false"
-  FLUENTD_HOST:       "fluentd-aggregator.logging.svc.cluster.local"
-  FLUENTD_PORT:       "24224"
-  SERVER_PORT:        "8081"
-  DEBUG:              "true"
+  POSTGRES_HOST: "${POSTGRES_HOST}"
+  POSTGRES_PORT: "${POSTGRES_PORT}"
+  POSTGRES_USER: "${POSTGRES_USER}"
+  POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
+  POSTGRES_DB: "${POSTGRES_DB}"
+  REDIS_HOST: "${REDIS_HOST}"
+  REDIS_PORT: "${REDIS_PORT}"
+  REDIS_PASSWORD: "${REDIS_PASSWORD}"
+  FLUENTD_ENABLED: "${FLUENTD_ENABLED}"
+  FLUENTD_HOST: "${FLUENTD_HOST}"
+  FLUENTD_PORT: "${FLUENTD_PORT}"
+  SERVER_PORT: "${SERVER_PORT}"
+  DEBUG: "${DEBUG}"
