--- a/helm/back/templates/secret.yaml
+++ b/helm/back/templates/secret.yaml
@@ -5,15 +5,15 @@ metadata:
 type: Opaque
 data:
   POSTGRES_HOST: {{ .Values.envSecrets.POSTGRES_HOST | b64enc }}
-  POSTGRES_PORT: {{ .Values.envSecrets.POSTGRES_PORT | b64enc }}
+  POSTGRES_PORT: {{ b64enc (toString .Values.envSecrets.POSTGRES_PORT) | quote }}
   POSTGRES_USER: {{ .Values.envSecrets.POSTGRES_USER | b64enc }}
   POSTGRES_PASSWORD: {{ .Values.envSecrets.POSTGRES_PASSWORD | b64enc }}
   POSTGRES_DB: {{ .Values.envSecrets.POSTGRES_DB | b64enc }}
   REDIS_HOST: {{ .Values.envSecrets.REDIS_HOST | b64enc }}
-  REDIS_PORT: {{ .Values.envSecrets.REDIS_PORT | b64enc }}
+  REDIS_PORT: {{ b64enc (toString .Values.envSecrets.REDIS_PORT) | quote }}
   REDIS_PASSWORD: {{ .Values.envSecrets.REDIS_PASSWORD | b64enc }}
-  FLUENTD_ENABLED: {{ .Values.envSecrets.FLUENTD_ENABLED | b64enc }}
+  FLUENTD_ENABLED: {{ b64enc (toString .Values.envSecrets.FLUENTD_ENABLED) | quote }}
   FLUENTD_HOST: {{ .Values.envSecrets.FLUENTD_HOST | b64enc }}
-  FLUENTD_PORT: {{ .Values.envSecrets.FLUENTD_PORT | b64enc }}
-  SERVER_PORT: {{ .Values.envSecrets.SERVER_PORT | b64enc }}
-  DEBUG: {{ .Values.envSecrets.DEBUG | b64enc }}
+  FLUENTD_PORT: {{ b64enc (toString .Values.envSecrets.FLUENTD_PORT) | quote }}
+  SERVER_PORT: {{ b64enc (toString .Values.envSecrets.SERVER_PORT) | quote }}
+  DEBUG: {{ b64enc (toString .Values.envSecrets.DEBUG) | quote }}
