--- a/helm/front/files/nginx.conf
+++ b/helm/front/files/nginx.conf
@@ -16,7 +16,7 @@ server {
         proxy_set_header    Host                $host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
-        proxy_pass          http://frontend.example.local:8081;
+        proxy_pass          http://back-back-end.app.svc.cluster.local:8081;
         }
 
     }
