--- a/helm/front/files/nginx.conf
+++ b/helm/front/files/nginx.conf
@@ -1,6 +1,6 @@
 server {
-        listen 443 ssl;
-        listen [::]:443 ssl;
+        listen 443;
+        listen [::]:443;
 
         root /usr/share/nginx/html;
 
